Configuração SQL Server

--- a/JpvAPI/JpvApi/appsettings.json
+++ b/JpvAPI/JpvApi/appsettings.json
@@ -7,7 +7,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1;Port=5432;Database=testes;User Id=postgres;Password=postgres;"
+    "DefaultConnection": "Server=127.0.0.1;Port=5432;Database=testes;User Id=postgres;Password=postgres;",
+    "SqlServerConnection": "Server=testesqlserver.cwcsxvemsvjr.sa-east-1.rds.amazonaws.com,3066;Database=apijpv;User Id=admin;Password=admin123;"
   },
   "AllowedHosts": "*"
 }
