--- a/JpvAPI/JpvApi.Infra.Database/JpvApi.Infra.Database.csproj
+++ b/JpvAPI/JpvApi.Infra.Database/JpvApi.Infra.Database.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.2" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.4" />
     <PackageReference Include="Tnf.Drivers.DevartPostgreSQL" Version="3.0.0.14603" />
   </ItemGroup>
